<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ChannelAX8206_HWI" Id="{11773588-5762-4682-b023-0e11da44b176}">
    <Declaration><![CDATA[TYPE ST_ChannelAX8206_HWI :
STRUCT
  siIGBTTemp    : INT;
  rMotorTemp    : REAL;
  rMotorTorque  : REAL;
  udMotorDIGIns : UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>