<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_DriverAX8206_HWI" Id="{a902e78f-3499-42e9-865a-5896e341dd21}">
    <Declaration><![CDATA[TYPE ST_DriverAX8206_HWI :
STRUCT
  comState          : ST_CardState_HWI;
  sdiDcOutputShift  : DINT;
  sdiDcInputShift   : DINT;
  
  stFront           : ST_ChannelAX8206_HWI;//ChB
  stBack            : ST_ChannelAX8206_HWI;//ChA
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>